[gd_scene load_steps=4 format=3 uid="uid://conx6pnr1yaty"]

[ext_resource type="Script" uid="uid://c1oallupiwpuc" path="res://hud.gd" id="1_efote"]
[ext_resource type="FontFile" uid="uid://db4yn64ocfrch" path="res://fonts/Xolonium-Regular.ttf" id="2_vow1y"]
[ext_resource type="FontFile" uid="uid://cm2f6rdyjp858" path="res://fonts/Daydream DEMO.otf" id="3_vow1y"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_efote")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_vow1y")
theme_override_font_sizes/font_size = 55
text = "Dodge The Shrooms!"
autowrap_mode = 2

[node name="CoinLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 2

[node name="HealthLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("2_vow1y")
theme_override_font_sizes/font_size = 20
text = "health:"
horizontal_alignment = 2
vertical_alignment = 2

[node name="LevelLabel" type="Label" parent="."]
offset_left = 100.0
offset_top = 100.0
offset_right = 140.0
offset_bottom = 133.0
theme_override_fonts/font = ExtResource("3_vow1y")
theme_override_font_sizes/font_size = 20

[node name="LevelUpMessage" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("3_vow1y")
theme_override_font_sizes/font_size = 22

[node name="Settings" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="start_game" from="." to="." method="_on_start_game"]
[connection signal="start_game" from="." to="." method="new_game"]
